--- a/main.html
+++ b/main.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Nazov</title>
 </head>
 <body>
-
+zmena
 </body>
 </html>
